# strategy-sim

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INITIAL.md  README.md  app.py  pyproject.toml  requirements.txt  run_tests.py  test_run.py  validate_implementation.py  verify_success_criteria.py  产品需求.md
.claude/: settings.local.json
PRPs/: strategysim-ai-multi-agent-system.md
docs/: API.md  DEPLOYMENT.md
src/: __init__.py
src/agents/: __init__.py  analyst_agent.py  base_agent.py  customer_agent.py  investor_agent.py  legal_agent.py  strategist_agent.py  team.py
src/config/: __init__.py  prompts.py  settings.py
src/models/: __init__.py  agent_models.py  decision_models.py  report_models.py
src/tools/: __init__.py  financial_calculator.py  legal_compliance.py  market_research.py  risk_modeler.py  strategic_frameworks.py
src/utils/: __init__.py  report_generator.py  visualization.py
tests/: __init__.py  conftest.py
tests/test_agents/: __init__.py  test_base_agent.py  test_investor_agent.py
tests/test_integration/: test_team_integration.py
tests/test_models/: __init__.py  test_agent_models.py  test_decision_models.py  test_report_models.py
tests/test_tools/: __init__.py  test_financial_calculator.py
tests/test_utils/: __init__.py  test_report_generator.py
